新增captcha接口
