# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-      "description": "基于iris的api服务，默认端口：8000",
+      "description": "基于GiNana的个人网站项目，默认端口：8000",
         "title": "GiNana",
         "contact": {},
         "license": {
@@ -12,9 +12,9 @@
     "host": "127.0.0.1:8000",
     "basePath": "/api",
     "paths": {
-      "/users": {
+      "/login/captcha": {
             "get": {
-              "description": "获取用户列表(分页)",
+              "description": "获取验证码",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,35 +22,58 @@
                     "application/json"
                 ],
                 "tags": [
-                  "Users"
+                  "Login"
+                ],
+              "responses": {
+                "200": {
+                  "description": "data:image/png;base64,U3dhZ2dlciByb2Nrcw==",
+                  "schema": {
+                    "type": "string"
+                  }
+                },
+                "500": {
+                  "description": "Internal Server Error",
+                  "schema": {
+                    "$ref": "#/definitions/model.JSON"
+                  }
+                }
+              }
+            }
+      },
+      "/login/captcha/check": {
+        "post": {
+          "description": "提前检查验证码",
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "Login"
                 ],
                 "parameters": [
                     {
-                        "type": "integer",
-                      "description": "页码",
-                      "name": "page",
-                      "in": "query",
-                      "required": true
-                    },
-                  {
-                    "type": "integer",
-                    "description": "页码尺寸",
-                    "name": "pagesize",
-                    "in": "query",
-                        "required": true
+                      "description": "Check Captcha",
+                      "name": "captcha",
+                      "in": "body",
+                      "required": true,
+                      "schema": {
+                        "$ref": "#/definitions/model.Captcha"
+                      }
                     }
                 ],
                 "responses": {
                     "200": {
                       "description": "OK",
                         "schema": {
-                          "$ref": "#/definitions/model.User"
+                          "$ref": "#/definitions/model.JSON"
                         }
                     },
                     "500": {
                       "description": "Internal Server Error",
                         "schema": {
-                          "$ref": "#/definitions/resp.JSON"
+                          "$ref": "#/definitions/model.JSON"
                         }
                     }
                 }
@@ -58,30 +81,23 @@
       }
     },
   "definitions": {
-    "model.User": {
+    "model.Captcha": {
       "type": "object",
+      "required": [
+        "code"
+      ],
       "properties": {
-        "created_at": {
-          "type": "integer"
-        },
-        "id": {
-          "type": "integer"
-        },
-        "is_auth": {
-          "type": "boolean"
-        },
-        "nickname": {
+        "code": {
+          "description": "Code",
           "type": "string"
         },
-        "updated_at": {
-          "type": "integer"
-        },
-        "username": {
+        "image": {
+          "description": "验证码图片",
           "type": "string"
         }
       }
     },
-    "resp.JSON": {
+    "model.JSON": {
       "type": "object",
       "properties": {
         "code": {
